Fix PWA layout issues

--- a/src/index.css
+++ b/src/index.css
@@ -135,5 +135,9 @@
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
     text-rendering: optimizeLegibility;
+    
+    /* PWA safe-area support for iOS devices */
+    padding-left: env(safe-area-inset-left);
+    padding-right: env(safe-area-inset-right);
   }
 }
